--- a/README.Rmd
+++ b/README.Rmd
@@ -57,8 +57,8 @@ library(isopleuros)
 
 **isopleuros** tries to mimic the way **graphics** works as much as possible. This means that you should not be confused if you are familiar with the standard R graphics environment.
 
-```{r, fig.width=5, fig.height=5, fig.align='center'}
-## Data from Husi 2022
+```{r ternary, fig.width=7, fig.height=7, fig.align='center'}
+## Data from Barrera and Velde 1989
 data("verre", package = "folio")
 
 ## Select data
@@ -66,6 +66,14 @@ coda <- verre[, c("Na2O", "CaO", "K2O")]
 
 ## Ternary plot
 ternary_plot(coda, panel.first = ternary_grid())
+
+## Split data
+groups <- split(coda, f = coda$Na2O > 5)
+
+## Add tolerance ellipses
+for (group in groups) {
+  ternary_tolerance(group, level = 0.95, border = "blue", lty = 2)
+}
 ```
 
 ## Contributing
