--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,9 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/tesselle/isopleuros/branch/main/graph/badge.svg)](https://app.codecov.io/gh/tesselle/isopleuros)
 [![CodeFactor](https://www.codefactor.io/repository/github/tesselle/isopleuros/badge/main)](https://www.codefactor.io/repository/github/tesselle/isopleuros/overview/main)
 
-[![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
+[![r-universe](https://tesselle.r-universe.dev/badges/isopleuros)](https://tesselle.r-universe.dev){.pkgdown-devel}
+
+[![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 <!-- badges: end -->
 
 ## Overview
@@ -51,8 +53,6 @@ remotes::install_github("tesselle/isopleuros")
 library(isopleuros)
 ```
 
-**isopleuros** tries to mimic the way **graphics** works as much as possible.
-
 ```{r ternary, fig.width=7, fig.height=7, fig.align='center'}
 ## Install extra package (if needed)
 # install.packages("folio")
@@ -64,14 +64,18 @@ data("verre", package = "folio")
 coda <- verre[, c("Na2O", "CaO", "K2O")]
 
 ## Ternary plot
-ternary_plot(coda, panel.first = ternary_grid())
+ternary_plot(
+  x = coda, 
+  panel.first = ternary_grid(),
+  col = as.factor(coda$Na2O > 5),
+)
 
 ## Split data
 groups <- split(coda, f = coda$Na2O > 5)
 
 ## Add tolerance ellipses
 for (group in groups) {
-  ternary_tolerance(group, level = 0.975, border = "blue", lty = 2)
+  ternary_tolerance(group, level = 0.975, lty = 2)
 }
 ```
 
