--- a/README.Rmd
+++ b/README.Rmd
@@ -21,8 +21,13 @@ knitr::opts_chunk$set(
 [![CodeFactor](https://www.codefactor.io/repository/github/tesselle/isopleuros/badge/main)](https://www.codefactor.io/repository/github/tesselle/isopleuros/overview/main)
 
 [![r-universe](https://tesselle.r-universe.dev/badges/isopleuros)](https://tesselle.r-universe.dev){.pkgdown-devel}
+[![CRAN Version](http://www.r-pkg.org/badges/version/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
+[![CRAN checks](https://badges.cranchecks.info/worst/isopleuros.svg)](https://cran.r-project.org/web/checks/check_results_isopleuros.html){.pkgdown-release}
+[![CRAN Downloads](http://cranlogs.r-pkg.org/badges/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
 
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
+
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7940389.svg)](https://doi.org/10.5281/zenodo.7940389)
 <!-- badges: end -->
 
 ## Overview
