--- a/README.Rmd
+++ b/README.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = NULL
 )
+Sys.setlocale("LC_MESSAGES", 'en_GB.UTF-8') # Force locale
 ```
 
 # isopleuros <img width=120px src="man/figures/logo.png" align="right" />
@@ -20,7 +21,7 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/tesselle/isopleuros/branch/main/graph/badge.svg?token=QnnAqgIIUp)](https://app.codecov.io/gh/tesselle/isopleuros)
 [![CodeFactor](https://www.codefactor.io/repository/github/tesselle/isopleuros/badge/main)](https://www.codefactor.io/repository/github/tesselle/isopleuros/overview/main)
 
-[![r-universe](https://tesselle.r-universe.dev/badges/isopleuros)](https://tesselle.r-universe.dev){.pkgdown-devel}
+[![r-universe](https://tesselle.r-universe.dev/badges/isopleuros)](https://tesselle.r-universe.dev/isopleuros){.pkgdown-devel}
 [![CRAN Version](http://www.r-pkg.org/badges/version/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
 [![CRAN checks](https://badges.cranchecks.info/worst/isopleuros.svg)](https://cran.r-project.org/web/checks/check_results_isopleuros.html){.pkgdown-release}
 [![CRAN Downloads](http://cranlogs.r-pkg.org/badges/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
@@ -32,7 +33,7 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-Ternary plots made simple. **isopleuros** allows to create ternary plot using **graphics**. It provides functions to display the data in the ternary space, to add or tune graphical elements and to display statistical summaries. It also includes common ternary diagrams useful for the archaeologist (e.g. soil texture charts, ceramic phase diagram).
+Ternary plots made simple. **isopleuros** allows to create ternary plots using **graphics**. It provides functions to display the data in the ternary space, to add or tune graphical elements and to display statistical summaries. It also includes common ternary diagrams useful for the archaeologist (e.g. soil texture charts, ceramic phase diagram).
 
 **isopleuros** is a dependency-free package^[The only exception is the `ternary_contour()` function for which the **akima** package is required, but is not installed by default.] designed to be as simple as possible. If you need finer tuning or more advanced features, you should consider the [**Ternary**](https://ms609.github.io/Ternary/) or [**ggtern**](http://www.ggtern.com/) package.
 
