--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = NULL
 )
-Sys.setlocale("LC_MESSAGES", 'en_GB.UTF-8') # Force locale
+Sys.setenv(LANGUAGE = "en") # Force locale
 ```
 
 # isopleuros <img width=120px src="man/figures/logo.png" align="right" />
@@ -23,9 +23,9 @@ Sys.setlocale("LC_MESSAGES", 'en_GB.UTF-8') # Force locale
 [![Dependencies](https://tinyverse.netlify.app/badge/isopleuros)](https://cran.r-project.org/package=isopleuros)
 
 [![r-universe](https://tesselle.r-universe.dev/badges/isopleuros)](https://tesselle.r-universe.dev/isopleuros){.pkgdown-devel}
-[![CRAN Version](http://www.r-pkg.org/badges/version/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
+[![CRAN Version](https://www.r-pkg.org/badges/version/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
 [![CRAN checks](https://badges.cranchecks.info/worst/isopleuros.svg)](https://cran.r-project.org/web/checks/check_results_isopleuros.html){.pkgdown-release}
-[![CRAN Downloads](http://cranlogs.r-pkg.org/badges/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
+[![CRAN Downloads](https://cranlogs.r-pkg.org/badges/isopleuros)](https://cran.r-project.org/package=isopleuros){.pkgdown-release}
 
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 
@@ -38,8 +38,11 @@ Ternary plots made simple. **isopleuros** allows to create ternary plots using *
 
 **isopleuros** is a dependency-free package^[The only exception is the `ternary_contour()` function for which the [**interp**](https://cran.r-project.org/package=interp) package is required, but is not installed by default.] designed to be as simple as possible. If you need finer tuning or more advanced features, you should consider the [**Ternary**](https://ms609.github.io/Ternary/) or [**ggtern**](http://www.ggtern.com/) package.
 
-```{r citation, echo=FALSE, comment=''}
-utils::citation("isopleuros")
+---
+
+```{r citation, echo=FALSE, comment='', results='asis'}
+cite <- utils::citation("isopleuros")
+print(cite, bibtex = FALSE)
 ```
 
 ## Installation
