--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ Sys.setenv(LANGUAGE = "en") # Force locale
 # isopleuros <img width=120px src="man/figures/logo.png" align="right" />
 
 <!-- badges: start -->
+[![Code coverage](https://packages.tesselle.org/isopleuros/coverage/badge.svg)](https://packages.tesselle.org/isopleuros/coverage/)
 [![Dependencies](https://tinyverse.netlify.app/badge/isopleuros)](https://cran.r-project.org/package=isopleuros)
 
 [![r-universe](https://tesselle.r-universe.dev/badges/isopleuros)](https://tesselle.r-universe.dev/isopleuros){.pkgdown-devel}
